# changelog-monitor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.devcontainer/: devcontainer.json  postCreate.sh
.github/workflows/: monitor.yml
config/: repositories.yml
docs/: SETUP.md
scripts/: fetcher.py  monitor.py  notifier.py  translator.py
snapshots/: anthropics_claude-code_CHANGELOG.json
